Changed makefiles to build the code with MARS, added an example 4D_poisson.cpp by A. Hamilton. Made the changes in the sources which allow the example to run. cmake building system was also updated with MARS but not tested yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,12 @@ if (MFEM_USE_SUITESPARSE)
   include_directories(${SuiteSparse_INCLUDE_DIRS})
 endif()
 
+# SuiteSparse (before SUNDIALS which may depend on KLU)
+if (MFEM_USE_MARS)
+  find_package(MARS REQUIRED)
+  include_directories(${MARS_INCLUDE_DIRS})
+endif()
+
 # SUNDIALS
 if (MFEM_USE_SUNDIALS)
   if (NOT MFEM_USE_MPI)
