--- a/config/config.hpp.in
+++ b/config/config.hpp.in
@@ -94,6 +94,9 @@
 // Enable functionality based on the MPFR library.
 // #define MFEM_USE_MPFR
 
+// Enable MFEM functionality based on the MARS library.
+// #define MFEM_USE_MARS
+
 // Windows specific options
 #ifdef _WIN32
 // Macro needed to get defines like M_PI from <cmath>. (Visual Studio C++ only?)
